--- a/packages/agent-vp/package.json
+++ b/packages/agent-vp/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "vitepress": "^1.6.3"
   },
