--- a/packages/agent-vp/package.json
+++ b/packages/agent-vp/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
+    "marked": "^15.0.7",
     "vitepress": "^1.6.3"
   },
   "devDependencies": {
