--- a/packages/agent-vp/package.json
+++ b/packages/agent-vp/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "marked": "^15.0.7",
