--- a/packages/agent-sls/code/package.json
+++ b/packages/agent-sls/code/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "koa": "^2.13.1"
+    "axios": "^1.8.4",
+    "koa": "^2.13.1",
+    "koa-router": "^13.0.1",
+    "sse.js": "^2.6.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
