--- a/packages/agent-sls/code/package.json
+++ b/packages/agent-sls/code/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.4.1",
     "koa-router": "^13.0.1",
     "sse.js": "^2.6.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
