--- a/packages/agent-sls/code/package.json
+++ b/packages/agent-sls/code/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "start-koa",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "nodejs-express",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
   "dependencies": {
-    "@koa/cors": "^5.0.0",
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "koa": "^2.13.1",
-    "koa-bodyparser": "^4.4.1",
-    "koa-router": "^13.0.1",
-    "sse.js": "^2.6.0"
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
