--- a/packages/agent-sls/code/package.json
+++ b/packages/agent-sls/code/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2"
   },
   "scripts": {
