feat: 改为agent box

--- a/packages/agent-sls/code/.env.example
+++ b/packages/agent-sls/code/.env.example
@@ -1,9 +1,10 @@
+VITE_SECRET_RANDOM_KEY=
 VITE_KOUZI_ASSISTANT_ID=
 VITE_KOUZI_CLIENT_SECRET=
-VITE_YUANQI_ASSISTANT_ID=
-VITE_YUANQI_CLIENT_SECRET=
 VITE_ZHIPU_ASSISTANT_ID=
 VITE_ZHIPU_CLIENT_ID=
 VITE_ZHIPU_CLIENT_SECRET=
+VITE_YUANQI_ASSISTANT_ID=
+VITE_YUANQI_CLIENT_SECRET=
 VITE_WENXIN_CLIENT_ID=
 VITE_WENXIN_CLIENT_SECRET=
